GPC/tests/examples/fail/errArith5.gpc

void errArith5() {
    return 3 >= 3.0;
}


